# vote_rust

./: .gitignore  Cargo.toml  README.md  SECURITY.md  dfx.json  package-lock.json  package.json
src/voting-app-backend/: Cargo.toml  voting-app-backend.did
src/voting-app-backend/src/: lib.rs
src/voting-app-frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/voting-app-frontend/src/: App.jsx  index.scss  main.jsx
src/voting-app-frontend/src/@types/: backend.ts  index.ts  proposal.ts  type.proposal.ts
src/voting-app-frontend/src/components/atoms/: Badge.tsx  Button.tsx  Card.tsx  Pagination.tsx
src/voting-app-frontend/src/components/layout/: mainLayout.tsx
src/voting-app-frontend/src/components/menu/: navbar.tsx
src/voting-app-frontend/src/components/molecules/: Card.tsx  EcosystemCard.tsx  FaqItem.tsx  PaginationInfo.tsx  StatCard.tsx
src/voting-app-frontend/src/components/organism/: Footer.tsx
src/voting-app-frontend/src/context/: DarkModeContext.tsx
src/voting-app-frontend/src/features/Contact/: ContactPage.tsx
src/voting-app-frontend/src/hooks/: useAuth.js  useAuth.tsx  usePagination.tsx  useRouter.tsx  useVoting.tsx
src/voting-app-frontend/src/layouts/: MainLayouts.tsx  ProfileLayout.tsx  SmoothScrollWrapper.tsx
src/voting-app-frontend/src/pages/: AboutPage.tsx  BlogPage.tsx  ContactPage.tsx  HomePage.tsx  Pricing.tsx
src/voting-app-frontend/src/pages/Dashboard/: ActiveVote.tsx  HomePage.tsx
src/voting-app-frontend/src/pages/Footer/: CookiePolicy.tsx  PrivacyPolicy.tsx  SecurityPolicy.tsx  Terms.tsx
(+62 files in other folders)
