[package]
name = "voting-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
candid = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"


